k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: application

spec:
  replicas: 2

  selector:
    matchLabels:
      app: back

  template:
    metadata:
      labels:
        app: back

    spec:
      containers:
      - name: back
        image: back-img
        imagePullPolicy: Never
        ports:
        - containerPort: 3000  

        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: application

spec:
  type: ClusterIP

  selector:
    app: back

  ports:
    - port: 3000
      targetPort: 3000
