k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: application

spec:
  replicas: 1

  selector:
    matchLabels:
      app: database

  template:
    metadata:
      labels:
        app: database

    spec:
      containers:
      - name: database
        image: postgres:16
        ports:
        - containerPort: 5432  

        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: application

spec:
  type: ClusterIP

  selector:
    app: database

  ports:
    - port: 5432
      targetPort: 5432
